<resources>
    <string name="app_name">Neobis_Android_Chapter8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="content">Минимальная длина — 8 символов. Для надежности пароль должен содержать буквы и цифры.</string>
    <string name="next">Далее</string>
    <string name="passwords_are_not_same">Пароли не сопадают</string>
    <string name="title">MOBI MARKET</string>
    <string name="sign_in">Войти</string>
    <string name="error_msg_card">Неверный логин или пароль</string>
    <string name="profile">Профиль</string>
    <string name="username">username</string>
    <string name="liked">Понравившиеся</string>
    <string name="my_products">Мои товары</string>
    <string name="log_out">Выйти</string>
    <string name="finish_registration">Закончить регистрацию</string>
    <string name="choose_photo">Выбрать фотографию</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="user_name">Имя пользователя</string>
    <string name="birthday">Дата рождения</string>
    <string name="add_phone_number">Добавить номер</string>
    <string name="hint">+996 (000) 000 000</string>
    <string name="mail">Электронная почта</string>
    <string name="enter_phoneNumber">Введите номер телефона</string>
    <string name="msg">Мы отправим вам СМС с кодом подтверждения</string>
    <string name="error_msg_number">Данный номер уже зарегистрирован</string>
    <string name="enter_code_sms">Введите код из СМС</string>
    <string name="finish">Подтвердить</string>
    <string name="error_msg_code">Неверный код</string>
    <string name="send_code_again">Отправить код еще раз</string>
    <string name="my_product">Мои товары</string>
    <string name="empty">Ой пусто!</string>
    <string name="price">Price</string>
    <string name="like">Нравится: 1М</string>
    <string name="title_productDetail">Title</string>
    <string name="description">Description</string>
    <string name="detail_description">Детальное описание</string>
    <string name="error_delete">Не удалось удалить товар</string>
    <string name="auth_error">Только зарегистрированный пользователь имеет доступ к товарам</string>
    <string name="error_msg">Произошла ошибка. Попробуйте еще раз</string>
    <string name="changesSaved">Изменения сохранены!</string>
    <string name="tryAgain">Повторите попытку!</string>
    <string name="authIsTrue">Подтверждение прошло успешно</string>
    <string name="codeIsNotCorrect">Неверный код. Попробуйте еще раз</string>
</resources>