<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.products.ProductDetailFragment">

    <ImageView
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/btn_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

    </HorizontalScrollView>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gothampro_bold"
        android:text="@string/price"
        android:textColor="#5458EA"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/heart"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/gothampro_medium"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="@+id/heart"
        app:layout_constraintStart_toEndOf="@+id/heart"
        app:layout_constraintTop_toTopOf="@+id/heart" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gothampro_bold"
        android:text="@string/title_productDetail"
        android:textColor="#494949"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/heart"
        app:layout_constraintTop_toBottomOf="@+id/heart" />

    <TextView
        android:id="@+id/short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/description"
        android:textColor="#C0C0C0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/detail_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gothampro_medium"
        android:text="@string/detail_description"
        android:textColor="#494949"
        app:layout_constraintStart_toStartOf="@+id/short_description"
        app:layout_constraintTop_toBottomOf="@+id/short_description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gothampro"
        android:text="@string/description"
        android:textColor="#C0C0C0"
        app:layout_constraintStart_toStartOf="@+id/detail_description_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_description_title" />

</androidx.constraintlayout.widget.ConstraintLayout>